<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">一路语伴</string>
    <string name="agora_app_id">892995891e7947a89dda080cf1759818</string>

    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="country">中国</string>
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="report">举报</string>
    <string name="time">1天前</string>
    <string name="question_peo_Name">王浩</string>

    <!-- Strings related to login -->
    <string name="mother_tongue">巴基斯坦</string>
    <string name="language_level">中级水平</string>
    <string name="new_learn">母语 :  </string>
    <string name="new_lraen">在学 : </string>

    <string name="add_avator">头像</string>

    <string name="tips">提示</string>

    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="toolong">录音时间过长</string>

    <string name="service_chat_gallery">相册</string>
    <string name="service_chat_camera">拍照</string>
    <string name="chat_emotion">表情</string>
    <string name="chat_send">发送</string>

    <string name="all_detail">对他的印象 : </string>
    <string name="detail_11">学霸，英语小天才</string>
    <string name="detail_12">爱吃烧烤</string>
    <string name="detail_13">精力充沛，跑步爱好者</string>
    <string name="hint">问题链接 </string>
    <string name="question_title">问题标题</string>
    <string name="question_detail_1">问题内容</string>
    <string name="add_question">添加问题</string>
    <string name="put_in_question">发表</string>
    <string name="response_name">Tom</string>
    <string name="response_answer">用户对该问题的回复</string>
    <string name="question_detail_actionBar">问题详情</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="appid">5ad97691</string>
    <string name="introduce">I have a TEFL certificate, but have not put it to good use just yet.</string>
    <string name="plan">2018/6/19 上午10:00 -上午12:00\n\n
        2018/6/19 下午13:00 -下午17:00\n\n2018/6/20 上午10:00 -上午12:00\n\n2018/6/20 下午13:00 -下午17:00</string>
    <string name="text_detail">翻着我们的照片，想念若隐若现，去年的冬天，我们笑得很甜...... —— 哎哟，不错哦!</string>
    <string name="dynamic_time">10分钟前</string>
    <string name="ai_te">\u0040</string>
    <string name="text_voice">1. 默认通道名称为demoChannel1.   2. 仅支持1v1语音调用.  3.等待远程用户...</string>
    <string name="text_video">1. 默认通道名称为demoChannel1.   2. 仅支持1v1视频调用.  3.等待远程用户...</string>
</resources>
