<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/question_action"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:src="@drawable/ic_language"/>
        <EditText
            android:id="@+id/question_link"
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:layout_height="45dp"
            android:hint="@string/hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_title"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/question_title"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="3.5"
            android:hint="@string/question_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_detail"/>
        <EditText
            android:id="@+id/question_detail"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="3.5"
            android:maxLength="30"
            android:hint="@string/question_detail_1"
            android:maxLines="6"
            android:gravity="top|left"
            android:lines="4"
            />
    </LinearLayout>

</LinearLayout>