<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/contacts_image_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/contact_image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/icon"
                app:borderColor="#fff"
                app:borderRadius="6dp"
                app:borderWidth="2dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/contacts_all_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="7dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/contact_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/contact_online"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_dot_24dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/contact_name_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginStart="3dp"
                            android:gravity="center"
                            android:text="白玉京"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/learn_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="20dp"
                            android:text="English"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toStartOf="@+id/learn_language"
                            android:text="@string/new_lraen"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contact_name_layout"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_learn"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/mother_tongue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="43dp"
                            android:layout_marginStart="43dp"
                            android:text="@string/mother_tongue"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/language_level"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="20dp"
                            android:text="@string/language_level"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>