<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/question_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:largeHeap="true">

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!--用户信息方面-->
        <RelativeLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.example.lab.android.nuc.chat.utils.views.RoundRectangleImageView
                android:id="@+id/question_peo_Image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/apple_pic"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/question_peo_Image"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <!--提问人的姓名-->
                    <TextView
                        android:id="@+id/question_peo_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/question_peo_Name"
                        android:textColor="#313131"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <!--问题提出的时间-->
                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignTop="@+id/question_peo_name"
                        android:id="@+id/add_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="14sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/country_Image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/country" />

                    <TextView
                        android:id="@+id/country_Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/country" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/question_item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll3"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
